# FinSight-RAG

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  validate_improvements.py
.github/workflows/: deploy.yml  dlq_retry.yml  ingestion.yml  keep_alive.yml  vectorization.yml
docs/: ADR-001-stack-technique.md  ADR-002-ingestion-strategy.md  ADR-003-robustness-improvements.md  Architecture.md  Ideas-01.md
src/: config.py
src/api/: main.py  schemas.py
src/ingestion/: collector.py  source.py  vectorizer.py
src/rag/: engine.py  prompts.py
src/utils/: date_parser.py  db_client.py  http_client.py  logger.py
tests/integration/: test_api.py
tests/unit/: test_config.py
